avances en registrar ventas