@@ -5,7 +5,7 @@ import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 
-public class ventana_agregar_pedido extends JFrame {
+public class ventana_agregar_ventas_d extends JFrame {
     private JPanel panel; // Panel para mostrar componentes añadidos dinámicamente
     private JPanel botones; // Panel para contener botones
     private ScrollPane barra; // ScrollPane para hacer los botones desplazables
@@ -13,13 +13,15 @@ public class ventana_agregar_pedido extends JFrame {
     public cliente_mostrar cliente;
     public ArrayList<autoparte> repuestos;
     public ArrayList<Integer> cantidad_r;
-    public ventana_pedidos ventana_padre;
-    public ventana_agregar_pedido(ventana_pedidos y,sistemaAutoparte x) {
+    public ventana_ventas ventana_padre;
+    public Integer total_c;
+    public JTextField total_entrada;
+    public ventana_agregar_ventas_d(ventana_ventas y,sistemaAutoparte x) {
         interfaz = x;
         ventana_padre=y;
         repuestos=new ArrayList<>();
         cantidad_r=new ArrayList<>();
-        
+        total_c=0;
         // Configuración de la ventana
         setSize(800, 600);
         setLayout(new BorderLayout());
@@ -47,8 +49,39 @@ public class ventana_agregar_pedido extends JFrame {
         gbc.gridy = 0;
         centro.add(entrada_fecha, gbc);
 
+
+        JComboBox<String> metodoPagoComboBox = new JComboBox<>(new String[]{"Efectivo", "Tarjeta de Crédito", "Débito"});
+        metodoPagoComboBox.setBounds(50, 30, 200, 25);
+        gbc.gridx = 2;
+        gbc.gridy = 0;
+        centro.add(metodoPagoComboBox,gbc);
+        
+        // Inicialización del JComboBox para las cuotas
+        JComboBox<Integer>cuotasComboBox = new JComboBox<>(new Integer[]{2, 3,6});
+        cuotasComboBox.setBounds(50, 70, 200, 25);
+        cuotasComboBox.setEnabled(false);
+        gbc.gridx = 3;
+        gbc.gridy = 0;
+        centro.add(cuotasComboBox,gbc);
+        
+        // Agregar ActionListener al JComboBox del método de pago
+        metodoPagoComboBox.addActionListener(new ActionListener() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                // Obtener el método de pago seleccionado
+                String metodoPagoSeleccionado = (String) metodoPagoComboBox.getSelectedItem();
+                
+                // Habilitar o deshabilitar el JComboBox de cuotas según el método de pago seleccionado
+                if ("Tarjeta de Crédito".equals(metodoPagoSeleccionado)) {
+                    cuotasComboBox.setEnabled(true);
+                } else {
+                    cuotasComboBox.setEnabled(false);
+                }
+            }
+        });
+
         // Etiqueta para agregar partes
-        JLabel etiqueta_agregar = new JLabel("Agregar autopartes al pedido: ");
+        JLabel etiqueta_agregar = new JLabel("Agregar autopartes a la venta: ");
         gbc.gridx = 0;
         gbc.gridy = 1;
         gbc.gridwidth = 1;
@@ -61,6 +94,7 @@ public class ventana_agregar_pedido extends JFrame {
         gbc.gridy=1;
         gbc.gridwidth=1;
         centro.add(comboBox,gbc);
+
         JTextField cantidad = new JTextField("Cantidad");
         cantidad.setPreferredSize(new Dimension(80, 30));
         gbc.gridx=2;
@@ -68,13 +102,13 @@ public class ventana_agregar_pedido extends JFrame {
         gbc.gridwidth=1;
         centro.add(cantidad,gbc);      
         JButton agregarButton = new JButton("Agregar");
-        agregarButton.setBackground(new Color(0, 102, 204));
         agregarButton.setPreferredSize(new Dimension(100, 30));
         agregarButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e){
                 agregar_boton((String)comboBox.getSelectedItem(),cantidad.getText());
             }
         });
+        agregarButton.setBackground(new Color(0, 102, 204));
         gbc.gridx=3;
         gbc.gridy=1;
         gbc.gridwidth=1;
@@ -93,6 +127,21 @@ public class ventana_agregar_pedido extends JFrame {
         botones.setLayout(new BoxLayout(botones, BoxLayout.Y_AXIS));
         barra.add(botones);
 
+
+        JLabel total= new JLabel("Total: ");
+        total.setPreferredSize(new Dimension(80, 30));
+        gbc.gridx=2;
+        gbc.gridy=2;
+        gbc.gridwidth=1;
+        centro.add(total,gbc);      
+        
+        total_entrada= new JTextField("0");
+        total_entrada.setPreferredSize(new Dimension(80, 30));
+        gbc.gridx=3;
+        gbc.gridy=2;
+        gbc.gridwidth=1;
+        centro.add(total_entrada,gbc);      
+
         // Panel para componentes dinámicos
         panel = new JPanel();
         panel.setPreferredSize(new Dimension(400, 100));
@@ -108,20 +157,20 @@ public class ventana_agregar_pedido extends JFrame {
         centro.add(titulo_cliente,gbc);
 
         JButton agregar_cliente = new JButton("Agregar cliente");
-        agregar_cliente.setBackground(new Color(0, 102, 204));
         agregar_cliente.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
-                ventana_agregar_cliente ventana = new ventana_agregar_cliente(ventana_agregar_pedido.this, interfaz);
+                ventana_agregar_cliente ventana = new ventana_agregar_cliente(ventana_agregar_ventas_d.this, interfaz);
                 ventana.setVisible(true);
             }
         });
         agregar_cliente.setPreferredSize(new Dimension(200, 100));
+        agregar_cliente.setBackground(new Color(0, 102, 204));
         gbc.gridx = 0;
         gbc.gridy = 4;
         gbc.gridwidth = 1;
         centro.add(agregar_cliente, gbc);
 
-        JButton boton_agregar= new JButton("agregar pedido");
+        JButton boton_agregar= new JButton("agregar venta");
         boton_agregar.setPreferredSize(new Dimension(200, 100));
         gbc.gridx = 1;
         gbc.gridy = 4;
@@ -129,14 +178,36 @@ public class ventana_agregar_pedido extends JFrame {
         boton_agregar.setBackground(new Color(0, 102, 204));
         boton_agregar.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e){
-                for (Component comp : botones.getComponents()) {
-                        JButton btn = (JButton) comp;
-                        String[] text=(btn.getText()).split(" ");
-                        agregar(text[0],new Integer(text[1]));
-                }
-                interfaz.registrarPedido(interfaz.pedidos.getid(),repuestos,cantidad_r, entrada_fecha.getText(),cliente.cliente);
-                interfaz.pedidos.setid(interfaz.pedidos.getid()+1);
+                for(Integer i=0;i!=repuestos.size();i++){
+                        autoparte repuesto= repuestos.get(i);
+                        Integer cant= cantidad_r.get(i);
+                        interfaz.eliminar_stock(repuesto,cant);
+                        
+                    }
+                    metodoDePago forma_de_pago;
+                    switch ((String)metodoPagoComboBox.getSelectedItem()) {
+                        case "Efectivo":
+                            forma_de_pago=new efectivo(Float.valueOf(total_c));
+                            break;
+                        case "Tarjeta de Crédito":
+                            forma_de_pago=new TarjetaDeCredito(Float.valueOf(total_c),(Integer)cuotasComboBox.getSelectedItem());
+                            break;
+                        case "Débito":
+                            forma_de_pago= new debito(total_c);
+                            break;
+                    
+                        default:
+                            forma_de_pago=null;
+                            break;
+                    }
+                interfaz.iniciarVentaDirecta(interfaz.ventas.getid(),cliente.cliente.getnombre(), repuestos, cantidad_r,forma_de_pago);
+                interfaz.ventas.setid(interfaz.ventas.getid()+1);
                 ventana_padre.cargar_elementos();
+                
+                JOptionPane.showMessageDialog(null, 
+                            "la venta se ha concretado correctamente", 
+                      "venta ok", 
+                            JOptionPane.INFORMATION_MESSAGE);
                 
             }
         });
@@ -164,11 +235,8 @@ public class ventana_agregar_pedido extends JFrame {
        
     }
 
-    public void elementos(){
-
-    }
-    public void agregar(String nombre,Integer cant){
-        repuestos.add(buscarAutoparte(nombre));
+    public void agregar(autoparte autoparte,Integer cant){
+        repuestos.add(autoparte);
         cantidad_r.add(cant);
     }
     public autoparte buscarAutoparte(String nombre){
@@ -176,15 +244,32 @@ public class ventana_agregar_pedido extends JFrame {
     }
 
     public void agregar_boton(String autoparte,String num){
-        String a=autoparte+" "+num;
-        JButton boton =new JButton(a);
-        boton.setPreferredSize(new Dimension(415, 50));
-        boton.setMaximumSize(new Dimension(415, 50));
-        boton.setMinimumSize(new Dimension(415, 50));
-        boton.setBackground(new Color(0, 102, 204));
-        botones.add(boton);
-        barra.revalidate();
-        barra.repaint();
-    }
+        autoparte ap=interfaz.buscAutoparte(autoparte);
+        boolean stocK_ok=interfaz.hay_stock(ap,Integer.valueOf(num));
+        if(!stocK_ok){
+                JOptionPane.showMessageDialog(null, 
+                "no hay suficiente stock de la autoparte: "+ap.denominacion+" el stock actual es de: "+String.valueOf(ap.getstock()), 
+          "Error no hay suficiente stock", 
+                JOptionPane.ERROR_MESSAGE);
+        }
+        else{
+            String a=autoparte+" "+num;
+            JButton boton =new JButton(a);
+            agregar(ap,Integer.valueOf(num));
+            boton.setPreferredSize(new Dimension(415, 50));
+            boton.setMaximumSize(new Dimension(415, 50));
+            boton.setMinimumSize(new Dimension(415, 50));
+            boton.setBackground(new Color(0, 102, 204));
+            botones.add(boton);
+            total_c+=interfaz.calcular_subtotales(ap,Integer.valueOf(num));            
+            total_entrada.setText(String.valueOf(total_c));
+            barra.revalidate();
+            barra.repaint();
+            total_entrada.revalidate();
+            total_entrada.repaint();
+        }
+        
+        }
+
     
 }
